UWP开发准备篇

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Fish Yan
-SEOTitle: 薛焱的博客 | Fish Yan
+SEOTitle: Fish Yan | 薛焱的博客
 header-img: img/home-bg.jpg
 email: xueyan91@outlook.com
 description: "iOS开发工程师 | 薛焱，Web & make my love | this is my world"
